# pbg-backend

./: .env.sample  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
app/: main.py
app/core/: config.py  db.py  logging.py  pipeline.py  sentry.py
app/modules/: __init__.py
app/modules/comparison/: __init__.py
app/modules/documents/: __init__.py
app/modules/extraction/: __init__.py  router.py  schemas.py  service.py
app/modules/health/: __init__.py  router.py
app/modules/jobs/: __init__.py
