[project]
name = "pbg-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.0",
    "paddlepaddle-gpu==3.2.0",
    "paddlex[ocr]>=3.7.2",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "sentry-sdk>=2.64.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "paddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu126/"
explicit = true

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddle" }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]
